--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -189,7 +189,7 @@ jobs:
             "Optimization step error: $_" | Out-File -FilePath $logFile -Append
           }
 
-      - name: Create hotspot script in RDP Downloads and schedule it every 2 minutes
+     - name: Create hotspot script in RDP Downloads and schedule it every 2 minutes
         continue-on-error: true
         shell: powershell
         run: |
@@ -201,59 +201,32 @@ jobs:
           $timeStamp = (Get-Date).ToString('yyyyMMdd-HHmmss')
           $logPath = Join-Path $rdpDownloads "hotspot-log-$timeStamp.txt"
 
-          # Prepare script content (best-effort: use netsh hostednetwork; may fail on some hardware)
-          $scriptContent = @'
+          # Conteúdo do script em string simples para evitar erro de parse YAML
+          $scriptContent = @"
 # create_hotspot.ps1 - attempt to configure/start hosted network and log results
-$ts = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
-$outFile = "$env:USERPROFILE\Downloads\hotspot-log-$($ts -replace '[: ]','_').txt"
+\$ts = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
+\$outFile = "\$env:USERPROFILE\Downloads\hotspot-log-\$((Get-Date).ToString('yyyyMMdd-HHmmss')).txt"
 try {
-    $ssid = "CloudGaming-$env:COMPUTERNAME"
-    $key = "CloudG@m1ngKey!"  # change if desired
-    $startTime = Get-Date
-    $report = "=== Hotspot run at $ts ===`n"
-    # Try to set hostednetwork (legacy) - may not be supported on all adapters
-    netsh wlan set hostednetwork mode=allow ssid=$ssid key=$key 2>&1 | Out-String | ForEach-Object { $report += "$_`n" }
-    netsh wlan start hostednetwork 2>&1 | Out-String | ForEach-Object { $report += "$_`n" }
-    # Log IPs and adapter info
-    $ipOut = ipconfig /all 2>&1
-    $report += "`nIPCONFIG:`n$ipOut`n"
-    $report | Out-File -FilePath $outFile -Encoding UTF8 -Append
+    \$ssid = "CloudGaming-\$env:COMPUTERNAME"
+    \$key = "CloudG@m1ngKey!"
+    \$report = "=== Hotspot run at \$ts ===`n"
+    netsh wlan set hostednetwork mode=allow ssid=\$ssid key=\$key 2>&1 | Out-String | ForEach-Object { \$report += "\$_`n" }
+    netsh wlan start hostednetwork 2>&1 | Out-String | ForEach-Object { \$report += "\$_`n" }
+    \$ipOut = ipconfig /all 2>&1
+    \$report += "`nIPCONFIG:`n\$ipOut`n"
+    \$report | Out-File -FilePath \$outFile -Encoding UTF8 -Append
 } catch {
-    "Hotspot script error: $_" | Out-File -FilePath $outFile -Encoding UTF8 -Append
+    "Hotspot script error: \$_" | Out-File -FilePath \$outFile -Encoding UTF8 -Append
 }
-'@
+"@
 
-          # Save script as the RDP user (ensure folder exists)
+          # Save and schedule the script
           if (-not (Test-Path $rdpDownloads)) { New-Item -Path $rdpDownloads -ItemType Directory -Force | Out-Null }
           Set-Content -Path $scriptPath -Value $scriptContent -Force -Encoding UTF8
 
-          # Create a scheduled task that runs every 2 minutes under the RDP user credentials
-          # Remove existing task if present (best-effort)
           schtasks /Delete /TN $taskName /F 2>$null | Out-Null
-
           $action = "powershell -NoProfile -ExecutionPolicy Bypass -File `"$scriptPath`""
-          # Create task: runs every 2 minutes
           schtasks /Create /SC MINUTE /MO 2 /TN $taskName /TR $action /RU $username /RP $passwordPlain /F
-
-          # Start the task once now (best-effort)
           schtasks /Run /TN $taskName 2>$null | Out-Null
 
-          Write-Host "Scheduled hotspot task '$taskName' created to run as $username every 2 minutes. Script path: $scriptPath"
-          Write-Host "Logs will be saved to $rdpDownloads as hotspot-log-*.txt"
-
-      - name: Maintain Connection
-        # keep this step running so the job doesn't exit early; it's part of your original flow
-        continue-on-error: true
-        shell: powershell
-        run: |
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Address: $env:TAILSCALE_IP"
-          Write-Host "Username: $env:RDP_USER"
-          Write-Host "Password: $env:RDP_PASSWORD"
-          Write-Host "==================`n"
-          # Run a loop for the duration of the job to keep the runner alive (until timeout)
-          $end = (Get-Date).AddMinutes(50)
-          while ((Get-Date) -lt $end) {
-            Start-Sleep -Seconds 300
-            Write-Host "Heartbeat at $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')"
-          }
+          Write-Host "✅ Hotspot task '$taskName' criado para $username. Logs: $rdpDownloads\hotspot-log-*.txt"
