--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Configure Core RDP Settings
         continue-on-error: true
+        shell: powershell
         run: |
           # Enable Remote Desktop and disable Network Level Authentication (NLA)
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
@@ -22,7 +23,6 @@ jobs:
 
           # Restart the Remote Desktop Service to apply changes
           Restart-Service -Name TermService -Force
-
       - name: Create RDP User with Fixed Password
         continue-on-error: true
         shell: powershell
